src/objects/QuickCreateToolbarVFOverride__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LabelOverride__c</fullName>
        <label>LabelOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <label>RecordTypeName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <label>SObjectType</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VFPage__c</fullName>
        <label>VFPage</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>QuickCreateToolbarVFOverride</label>
</CustomObject>